# app-templates

./: .gitignore  cookiecutter.json  justfile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-install.sh
.devcontainers/: Dockerfile  devcontainer.json  docker-compose.yml
app/: database.py
myapp/: main.py
{{cookiecutter.app}}/: Cargo.toml  justfile  pyproject.toml
{{cookiecutter.app}}/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
{{cookiecutter.app}}/src/: main.rs
{{cookiecutter.app}}/src/game/: assets.rs  mod.rs
{{cookiecutter.app}}/{{cookiecutter.app}}/: {{cookiecutter.app}}.py
