[tool.poetry]
name = "myapp"
version = "0.1.0"
description = ""
authors = ["Ada Lundhe <ada@datavant.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.25"
boto3 = "^1.34.34"
uvicorn = "^0.27.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
